--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                           <div class="col-lg-6">
                               <p>Copyright © 2022 KHaled Refat Co., Ltd. All Rights Reserved. 
                               
-                              <br>Design: <a rel="sponsored" href="https://www.facebook.com/engkhaledrefat" target="_blank">TemplateMo</a></p>
+                              <br>Design: <a rel="sponsored" href="https://www.facebook.com/engkhaledrefat" target="_blank">KHaled Refat</a></p>
                           </div>
                           <div class="col-lg-6">
                               <a href="#top" class="scroll-to-top">
